--- a/data/config.env.example
+++ b/data/config.env.example
@@ -3,4 +3,4 @@
 # Looking forward to killing this file someday with a move to a PaaS or similar.
 
 export CENSYS_UID=""
-export CENSYS_API_KEY="
+export CENSYS_API_KEY=""
