--- a/manifest.yml
+++ b/manifest.yml
@@ -4,3 +4,7 @@ applications:
   memory: 512M
   instances: 1
   buildpack: python_buildpack
+- name: pulse-staging
+  memory: 512M
+  instances: 1
+  buildpack: python_buildpack
