--- a/meta.yml
+++ b/meta.yml
@@ -1,16 +1,16 @@
 # Site metadata.
 
 # Canonical URL
-url: https://pulse.cio.gov
+url: https://pulse.openstate.eu
 
 name: Pulse
 title: "The pulse of the federal .gov space"
-description: "How federal government domains are meeting best practices on the web."
+description: "De stand van zaken rondom HTTPS bij overheidsdomeinen."
 
 # Data source URLs. They shouldn't require manual updates.
 data:
   # URL where we download the .gov domain list from.
-  domains_url: https://raw.githubusercontent.com/GSA/data/gh-pages/dotgov-domains/current-federal.csv
+  domains_url: https://raw.githubusercontent.com/openstate/datasets/master/websites-overheid.csv
 
   # URL where we download the participating DAP .gov list from.
   analytics_url: https://analytics.usa.gov/data/live/second-level-domains.csv
